--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>dog ( god ) image of the GET (day) - using k8s now! :( sad</h4>
+      <h4>dog ( god ) image of the GET (day) - using k8s now! :( happyyyyyy</h4>
       {% if url %}
         <img src="{{ url }}" />
       {% else %}
