starting now to work on terraform, checking before ci cd is functional!

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>dog ( god ) image of the GET (day) - final k8s version!</h4>
+      <h4>dog ( god ) image of the GET (day) - now working on terraform! lol</h4>
       {% if url %}
         <img src="{{ url }}" />
       {% else %}
