using export IMAGE_TAG=${var.image_tag} and not just ${image_tag}

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>dog ( god ) image of the GET (day) - checking fucking all</h4>
+      <h4>dog ( god ) image of the GET (day) - using terraform vars lol :(</h4>
       {% if url %}
         <img src="{{ url }}" />
       {% else %}
