--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>dog ( god ) image of the GET (day) - you see this using azure k8s load balancer!</h4>
+      <h4>dog ( god ) image of the GET (day) - working with azure k8s</h4>
       {% if url %}
         <img src="{{ url }}" />
       {% else %}
