last testing of helm and app cd

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,9 @@
   <head>
     <style type="text/css">
       body {
-        background: black;
+        background: peachpuff;
+        background-image: url('https://static.vecteezy.com/system/resources/thumbnails/022/925/252/small_2x/dog-paw-seamless-pattern-cat-paw-foot-print-isolated-wallpaper-background-backdrop-brown-vector.jpg');
+        background-repeat: repeat;
         color: white;
       }
       div.container {
@@ -28,7 +30,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>dog ( god ) image of the GET (day) - using helm now lol</h4>
+      <h4>dog ( god ) image of the GET (day) - using helm, thanks to Roni!</h4>
       {% if url %}
         <img src="{{ url }}" />
       {% else %}
