--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,12 @@
         background: peachpuff;
         background-image: url('https://static.vecteezy.com/system/resources/thumbnails/022/925/252/small_2x/dog-paw-seamless-pattern-cat-paw-foot-print-isolated-wallpaper-background-backdrop-brown-vector.jpg');
         background-repeat: repeat;
-        color: white;
+        color: rgba(3, 3, 3, 0.279);
       }
       div.container {
         max-width: 500px;
         margin: 100px auto;
-        border: 20px solid white;
+        border: 20px solid rgb(236, 146, 119);
         padding: 10px;
         text-align: center;
       }
@@ -22,7 +22,7 @@
         height: auto;
         margin: 20px auto;
         display: block;
-        border: 10px solid white;
+        border: 10px solid rgb(236, 162, 123);
         border-radius: 20px;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
       }
