--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,12 @@
         background: peachpuff;
         background-image: url('https://static.vecteezy.com/system/resources/thumbnails/022/925/252/small_2x/dog-paw-seamless-pattern-cat-paw-foot-print-isolated-wallpaper-background-backdrop-brown-vector.jpg');
         background-repeat: repeat;
-        color: rgba(3, 3, 3, 0.279);
+        color: black;
       }
       div.container {
         max-width: 500px;
         margin: 100px auto;
-        border: 20px solid rgb(236, 146, 119);
+        border: 15px solid rgb(245, 180, 150); /* Softer inner border */
         padding: 10px;
         text-align: center;
       }
@@ -18,11 +18,11 @@
         text-transform: uppercase;
       }
       img{
-        width: 50%;
+        width: 70%; /* Increased image size */
         height: auto;
         margin: 20px auto;
         display: block;
-        border: 10px solid rgb(236, 162, 123);
+        border: 10px solid rgb(245, 180, 150);
         border-radius: 20px;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
       }
