modifying one last time to test with helm and google cloud k8s terraform

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>dog ( god ) image of the GET (day) - using Helm and dynamodb locking in s3!</h4>
+      <h4>dog ( god ) image of the GET (day) - using Helm and google cloud!</h4>
       {% if url %}
         <img src="{{ url }}" />
       {% else %}
