--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>dog ( god ) image of the GET (day) - with monitoring</h4>
+      <h4>dog ( god ) image of the GET (day) - added visitor-count metric</h4>
       {% if url %}
         <img src="{{ url }}" />
       {% else %}
