testing api check

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>dog ( god ) image of the day!! (GET) - testing concurrency</h4>
+      <h4>dog ( god ) image of the day!! (GET) - modifying app and charts simultaneously</h4>
       {% if url %}
         <img src="{{ url }}" />
       {% else %}
