--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>dog ( god ) image of the day (GET) - umbrella 2</h4>
+      <h4>dog ( god ) image of the day (GET) - test upgrades</h4>
       {% if url %}
         <img src="{{ url }}" />
       {% else %}
