--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>dog ( god ) image of the day (GET) - app dir lol</h4>
+      <h4>dog ( god ) image of the day (GET) - new ci cd</h4>
       {% if url %}
         <img src="{{ url }}" />
       {% else %}
