Dockerfile and docker-compose.yaml moved to app dir and init.sql under dir - structured project

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>dog ( god ) image of the day (GET) - Final Version! updated lok</h4>
+      <h4>dog ( god ) image of the day (GET) - Final Version! updated dockers location</h4>
       {% if url %}
         <img src="{{ url }}" />
       {% else %}
